styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');

html {
    font-family: 'Roboto', sans-serif;
}

* {
    margin: 0;
    padding: 0;
}

:root {
    --falu-red: #721817;
    --sandy-brown: #B35C05;
    --indigo-dye: #2b4162;
    --dartmouth-green: #0b6e4f;
    --french-gray: #9F9FA8;
    --pure-white: #ffffff;
    --night: #131315;
}

body {
    font-size: 62.5%;

    -webkit-tap-highlight-color: none;

    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; 
    overflow: hidden;/* for Firefox */
    overflow-y: scroll;
}

body::-webkit-scrollbar {
    display: none; /* for Chrome, Safari, and Opera */
}

.background {
    position: fixed;

    background: linear-gradient(var(--pure-white), var(--french-gray));
    background-repeat: no-repeat;
    background-position: center;
    
    height: 100vh;
    width: 100vw;

    z-index: -1;
}

.content {
    position: absolute;

    left: 0;
    right: 0;
}

.faces {
    position: relative;
    display: flex;
    flex-direction: column;
    max-width: 60rem;
    height: fit-content;

    z-index: 111;

    margin: auto;

    /* box-shadow: 0 0 0 0.5rem lightgreen; */
}

.faces--index {
    margin-top: calc(50vmax - 50%);
}

.faces--project {
    margin-top: 4.8rem;
}

.faces-row {
    display: flex;
}

footer {
    position: fixed;
    inset: auto 0 0 0;

    height: 3.2rem;

    z-index: 999;
    text-align: center;
}

footer > p {
    font-size: 1rem;

    color: #333;

    margin: 0;
    margin-top: 0.8rem;
}

/* TEXT */
h1 {
    font-size: 16rem;
    font-weight: 800;
    line-height: 0;

    color: var(--night);
}

h2 {
    font-size: 11rem;
    font-weight: 700;
    line-height: 1.1;
    
    color: var(--night);
}

h3 {
    font-size: 8rem;
    font-weight: 800;
    line-height: 1.1;
    
    color: var(--night);
}

h4 {
    font-size: 6rem;
    font-weight: 700;
    line-height: 1.1;
    
    color: var(--night);
    text-shadow: -5rem 5rem 4rem #94949E;
}

p {
    font-size: 3.2rem;
    font-weight: 400;
    line-height: 1.1;
    
    color: var(--night);
}

.details-text {
    font-size: 1.6rem;
    font-weight: 400;
    max-width: 27ch;
}

.map {
    transform: scale(0.7);
}

/* PLAINS */
.x-plain { transform: rotateX(60deg) rotateZ(-45deg) }

.y-plain { transform: rotateX(-16.8deg) rotateY(60deg) }

.z-plain { transform: rotateX(16.8deg) rotateY(60deg) }

.list-section {
    width: 60rem;
    margin: auto;
    /* box-shadow: 0 0 0 0.5rem #0b6e4f; */
}

.details-section {
    display: grid;
    grid-template-columns: 50% 50%;
    width: 60rem;
    margin: auto;

    opacity: 0;
    animation-delay: 1s;
    /* box-shadow: 0 0 0 0.5rem #0b6e4f; */
}

.stick {
    position: fixed;
    inset: 0 0 auto 0;
}

/* TRANSITION ANIMATIONS */
.transition-out {
    animation-name: transition-out;
    animation-duration: 0.5s;
    animation-timing-function: cubic-bezier(0.65, 0, 0.7, 0.38);
    animation-fill-mode: forwards;
}

.transition-in {
    animation-name: transition-in;
    animation-duration: 0.5s;
    animation-timing-function: cubic-bezier(.26,.72,.28,1);
    animation-fill-mode: forwards;
}

.fade-in {
    animation-name: fade-in;
    animation-duration: 0.4s;
    animation-timing-function: linear;
    animation-fill-mode: forwards;
}

.swoop-in {
    animation-name: swoop-in;
    animation-duration: 0.6s;
    animation-timing-function: cubic-bezier(.26,.72,.28,1);
    animation-fill-mode: forwards;
}

/* TRANSITION DIRECTIONS */
.down {
    --x: -95%;
    --y: 50%;
    transform: translate(var(--x), var(--y));
}

.up {
    --x: 95%;
    --y: -50%;
    transform: translate(var(--x), var(--y));
}

.right {
    --x: 95%;
    --y: 50%;
    transform: translate(var(--x), var(--y));
}

@keyframes transition-out {
    0% {
        transform: translate(0%, 0%);
        opacity: 1;
    }
    100% {
        transform: translate(calc(var(--x) * -1), calc(var(--y) * -1));
        opacity: 0;
    }
}

@keyframes transition-in {
    0% {
        transform: translate(var(--x), var(--y));
        opacity: 0;
    }
    100% {
        transform: translate(0%, 0%);
        opacity: 1;
    }
}

@keyframes fade-in {
    0% { opacity: 0 }
    100% { opacity: 1 }
}

@keyframes swoop-in {
    0% {
        transform: translateX(-100%);
    }
    30% {
        opacity: 0;
    }
    100% { 
        opacity: 1;
        transform: translateX(0%); 
    }
}

